--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,12 +1,14 @@
 {
   "name": "front-end",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "homepage": "https://ananyagarg22.github.io/home-maintenance-rag-system",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "front-end": "file:",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -14,6 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
